--- a/styles.css
+++ b/styles.css
@@ -1,97 +1,58 @@
 html {
-  background: url(images/satt.jpg) no-repeat center center fixed;
+  background: url(images/sand.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
+.container {
+  padding: 5px;
+  border-radius: 10px;
+  margin: 0 auto;
+  max-width: 700px;
+  background-color: rgba(157, 158, 143, 0.34);
+  box-shadow: 12px 12px 2px 1px rgba(95, 77, 67, 1);
+}
+h3 {
+  font-size: 50px;
+}
+
+li {
+  list-style: none;
+  font-size: 20px;
+  line-height: 20px;
+}
+#location {
+  padding-top: 50px;
+}
+#description {
+  padding-top: 60px;
+  font-size: 20px;
+  line-height: 20px;
+}
+
 body {
-  background-color: transparent;
-  font-family: "Lora", serif;
+  color: rgba(95, 77, 67, 1);
+  background-color: hsla(0, 100%, 90%, 0.3);
+  font-family: "Playfair Display", serif;
+  padding-top: 20px;
 }
-
-h1,
-h2 {
-  font-size: 35px;
-  text-align: right;
-  line-height: 2%;
-  margin: 9px;
-}
-
-h4 {
-  margin: 10px;
-  float: right;
-  font-size: 35px;
-}
-
-.btn-success {
-  background-color: rgba(216, 191, 216, 0.774);
-  color: black;
-  border-radius: 2cm;
-  border: 0.5px transparent;
-  display: inline;
-  width: 20%;
-  margin: 5px;
-  line-height: 0.4in;
-  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, 0.2);
-}
-
-.btn-success:hover {
-  background-color: plum;
-}
-
-input {
-  border: 2px transparent;
-  border-radius: 2cm;
-  width: 50%;
-  line-height: 0.4in;
-  display: inline;
-  margin: 20px;
-  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, 0.2);
-}
-section {
-  line-height: 0.2in;
-  padding-left: 30px;
-  background-color: rgba(216, 191, 216, 0.774);
-  border: 3px transparent;
-  border-radius: 1cm;
-  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, 0.2);
-  height: 290px;
-  width: 760px;
-  margin: 35px auto 20px;
-  padding-top: 30px;
-  padding-bottom: 20px;
-}
-
-.card {
-  border-radius: 1cm;
-  background-color: rgba(216, 191, 216, 0.774);
-  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, 0.2);
-  margin-top: 1em;
-  padding: 10px;
-}
-
-section:hover {
-  background-color: plum;
+table {
   color: white;
 }
-button {
-  border-radius: 50%;
-  background-color: transparent;
-  border-color: thistle;
-  padding: 0.2m;
-}
-
-.card:hover {
-  background-color: plum;
-  color: white;
-}
-button:hover {
-  backround-color: rgba(33, 204, 48, 0.986);
+td {
+  color: rgba(129, 83, 110, 0.97);
+  font-weight: 300;
 }
 .git {
-  color: rgba(216, 191, 216, 0.774);
+  color: rgba(129, 83, 110, 0.97);
   padding: 20px;
   text-align: center;
   text-decoration: none;
+}
+
+a {
+  text-decoration: none;
+  color: rgba(129, 83, 110, 0.97);
+  font-weight: bold;
 }
