--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
-html {
-  background: url(images/sand.jpg) no-repeat center center fixed;
+body {
+  background: url(images/grass.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -8,7 +8,7 @@ html {
 .container {
   padding: 5px;
   border-radius: 10px;
-  margin: 0 auto;
+  margin: 10px 0 auto 10px 0 auto;
   max-width: 700px;
   background-color: rgba(157, 158, 143, 0.34);
   box-shadow: 12px 12px 2px 1px rgba(95, 77, 67, 1);
@@ -16,24 +16,34 @@ html {
 h3 {
   font-size: 50px;
 }
-
+h2 {
+  font-size: 25px;
+}
 li {
   list-style: none;
-  font-size: 20px;
-  line-height: 20px;
 }
 #location {
   padding-top: 50px;
 }
 #description {
   padding-top: 60px;
-  font-size: 20px;
-  line-height: 20px;
+  font-size: 13px;
+  line-height: 30px;
+  margin: 0 auto;
 }
-
+.btn-light {
+  background-color: rgba(98, 49, 4, 0.12);
+  color: rgba(95, 77, 67, 1);
+  border-radius: 0.5cm;
+  border: 0.5px transparent;
+  display: inline;
+  width: 20%;
+  margin: 5px;
+  line-height: 0.4in;
+  padding-bottom: none;
+}
 body {
   color: rgba(95, 77, 67, 1);
-  background-color: hsla(0, 100%, 90%, 0.3);
   font-family: "Playfair Display", serif;
   padding-top: 20px;
 }
@@ -41,18 +51,35 @@ table {
   color: white;
 }
 td {
-  color: rgba(129, 83, 110, 0.97);
+  color: rgba(95, 77, 67, 1);
   font-weight: 300;
 }
+.table-hover tbody tr:hover td {
+  color: white;
+}
 .git {
-  color: rgba(129, 83, 110, 0.97);
+  color: rgba(95, 77, 67, 1);
   padding: 20px;
   text-align: center;
   text-decoration: none;
 }
-
 a {
   text-decoration: none;
-  color: rgba(129, 83, 110, 0.97);
-  font-weight: bold;
+  color: white;
+  font-weight: bolder;
+}
+
+button {
+  font-size: 10px;
+  color: rgba(95, 77, 67, 1);
+  border: none;
+  border-radius: 3em;
+}
+#search-form {
+  margin: 10px;
+  width: 70%;
+}
+
+button:hover {
+  background-color: rgba(95, 77, 67, 1);
 }
