--- a/style.css
+++ b/style.css
@@ -170,6 +170,19 @@ button:hover {
   background-color: rgba(95, 77, 67, 1);
 }
 
-.units .active {
-  color: white;
+.units {
+  color: rgba(95, 77, 67, 1);
+  display: inline;
+  width: 20%;
+  margin: 5px;
+  padding: 5px;
+  line-height: 0.4in;
+  padding-bottom: none;
+}
+a {
+  color: rgba(95, 77, 67, 1);
+  text-decoration: none;
+}
+a:hover {
+  color: rgba(95, 77, 67, 1);
 }
